se elimino el particles.html

--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
                  <div class="form-header">
                      Escríbeme
                  </div>
-                 <form id="myForm" autocomplete="off" netlify >
+                 <form id="myForm" name="contact" method="POST" data-netlify="true" >
                     <div class="input-line">
                         <input  id="name" type="text" placeholder="Nombre" name="name" class="input-name">
                         <input id="email" type="email" placeholder="Email" name="email" class="input-name">
