arreglando el blog

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
             <div id="particles"></div>
               <!--Social Media Links-->
             <div class="social-media-links">
-               <a href="#"><img src="images/instagram logo.png" class="social-media" alt="instagram-logo"></a><!--Your instagram homepage link inser in place of "#"-->
-                <a href="#"><img src="images/facebook logo.png" class="social-media" alt="facebook-logo"></a>
-                <a href="#"><img src="images/linkedin logo.png" class="social-media" alt="linkedin-logo"></a>
-                <a href="#"><img src="images/twitter logo.png" class="social-media" alt="twitter-logo"></a>
+               <a href="https://www.instagram.com/sebastianflorezdev/"><img src="images/instagram logo.png" class="social-media" alt="instagram-logo"></a><!--Your instagram homepage link inser in place of "#"-->
+                <a href="https://www.facebook.com/sebastianflorezdev"><img src="images/facebook logo.png" class="social-media" alt="facebook-logo"></a>
+                <a href="https://www.linkedin.com/in/sebasflorez16/"><img src="images/linkedin logo.png" class="social-media" alt="linkedin-logo"></a>
+                <a href="https://twitter.com/sebaz_florez"><img src="images/twitter logo.png" class="social-media" alt="twitter-logo"></a>
 
             </div>
             <!--Social Media Links end-->
@@ -82,8 +82,8 @@
                         <span class="slash">|</span>
                     </div>
                     <div class="contact">
-                        <a href="Mailto:#"><img src="images/mail.png" alt="email-pic" class="contactpic"></a>
-                        <a href="Tel:#"><img src="images/call.png" alt="phone-pic" class="contactpic"></a>
+                        <a href="Mailto:juansebastianflorezescobar@gmail.com"><img src="images/mail.png" alt="email-pic" class="contactpic"></a>
+                        <a href="Tel:3223088873"><img src="images/call.png" alt="phone-pic" class="contactpic"></a>
                     </div>
                 </div>
             </div>
@@ -98,7 +98,7 @@
         <!--Main-Section End-->
         <!--about-->
         <div id="about">
-            <!--<div class="color-changer">
+            <div class="color-changer">
             <div class="color-panel">
                 <img src="images/gear.png" alt="">
             </div>
@@ -127,7 +127,7 @@
                     </ul>
                 </div>
             </div>
-            </div>-->
+            </div>
             <!--about content-->
             <div id="about-content">
                 <div class="about-header">
@@ -158,7 +158,7 @@
             </div>
             <!--services start-->
             <div id="services">
-                <!--<div class="color-changer">
+                <div class="color-changer">
                     <div class="color-panel">
                         <img src="images/gear.png" alt="">
                     </div>
@@ -187,7 +187,7 @@
                             </ul>
                         </div>
                     </div>
-                    </div>-->
+                    </div>
             <!--services header-->
                     <div class="services-heading wow">
                         <span class="color">Mis</span> Servicios
@@ -296,7 +296,7 @@
     <!--copyright-section You Can Remove After Downloading-->
             <div class="footer">
              <div class="footer-text">
-                 <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> Willy Wonkas
+                 <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> Sebastián Florez
              </div>
             </div>
     <!--copyright-section-->
@@ -425,7 +425,7 @@
             <span class ="header-caption"> My Latest <span class="color"> blog posts.</span></span></div>
             <div class="blog-content">
                  <div class="blogs">
-                     <a href="initial blog.html">
+                     <a href="entries/initial blog.html">
                      <div class="img">
                         <img src="images/post-one.jpg" alt="blog-one">
                         <div class="blog-date">8 May,20</div>
@@ -564,28 +564,28 @@
             <!--Contact information-->
              <div class="contact-info">
                 <div class="contact-info-header">
-                    Contact Info
+                    Información de Contacto
                 </div>
                 <div class="contact-info-content">
                 <div class="contect-info-content-line">
                     <img src="./images/icon-name.png" class="icon" alt="name-icon">
                     <div class="contact-info-icon-text">
-                        <h6>Name</h6>
-                        <p>Arlo Brown</p>
+                        <h6>Nombre</h6>
+                        <p>Sebastián Florez</p>
                   </div>
                 </div>
                 <div class="contect-info-content-line">
                   <img src="./images/icon-location.png" class="icon" alt="location-icon">
                   <div class="contact-info-icon-text">
-                      <h6>Location</h6>
-                      <p>New York, USA</p>
+                      <h6>Ubicación</h6>
+                      <p>Carrera 23 # 14 - 10</p>
                 </div>
               </div>
               <div class="contect-info-content-line">
                   <img src="./images/icon-phone.png" class="icon" alt="phone-icon">
                   <div class="contact-info-icon-text">
-                      <h6>Call</h6>
-                      <p>+9865376531</p>
+                      <h6>Telefono</h6>
+                      <p>322 3088873</p>
                 </div>
               </div>
               
@@ -593,7 +593,7 @@
                   <img src="./images/icon-email.png" class="icon" alt="email-icon">
                   <div class="contact-info-icon-text">
                       <h6>Email</h6>
-                      <p>Info@example.com</p>
+                      <p>juansebastianflorezescobar@gmail.com</p>
                 </div>
               </div>
                 </div>
