mejorando el seo-1

--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
             <!--Social Media Links end-->
             <div class="header-content">
                 <div class="header-content-box">
-                    <h1 class="main-title">Desarrollador Web y Diseñador Creativo en Yopal</h1>
+                    
                     <div class="firstline"><span class="color">Sebastián </span>Flórez</div>
                     <div class="secondline">
                         Soy
                         <span class="txt-rotate color" data-period="1200"
-                            data-rotate='[ " Programador.", " Diseñador.", " Blogger.", " Freelancer.", " Código." ]'></span>
+                            data-rotate='[ "Desarrollador Web y Diseñador Creativo." ]'></span>
                         <span class="slash">|</span>
                     </div>
                     <div class="contact">
