mejorando el chage color

--- a/index.html
+++ b/index.html
@@ -175,7 +175,6 @@
                         <img src="images/about1.png" alt="Your Image">
                     </div>
                 </div>
-
             </div>
             <!--services start-->
             <div id="services">
@@ -404,8 +403,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="portfolio portfolio-fourth">
-                    <!--<div class=" portfolio-image">
+                <!--<div class="portfolio portfolio-fourth">
+                    <div class=" portfolio-image">
                         <img src="images/portfolio-fourth.jpg" alt="portfolio-fourth">
                     </div>
                     <div class="portfolio-text">
@@ -413,8 +412,8 @@
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad ut optio repellat cupiditate
                              expedita eius dignissimos. Id cumque placeat minima ad laudantium suscipit voluptatem ducimus</p>
                         <div class="button"><a href="#"><button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button></a></div>
-                    </div>-->
-                </div>
+                    </div>
+                </div>-->
             </div>
             <!--copyright-section You Can Remove After Downloading-->
             <div class="footer">
@@ -428,7 +427,7 @@
         <!--blog-->
         <div id="blog">
             <div class="color-changer">
-                <!--<div class="color-panel">
+                <div class="color-panel">
                     <img src="images/gear.png" alt="">
                 </div>
                 <div class="color-selector">
@@ -455,7 +454,7 @@
                         </li>
                         </ul>
                     </div>
-                </div>-->
+                </div>
             </div>
             <div class="blog-header"> Blogs</span>
                 <span class="header-caption"> My Latest <span class="color"> blog posts.</span></span>
@@ -474,7 +473,7 @@
                         </div>
                     </a>
                 </div>
-                <!--<div class="blogs">
+                <div class="blogs">
                     <a href="#">
                     <div class="img">
                         <img src="images/post-two.jpg" alt="blog-two">
@@ -537,7 +536,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo tempora dolorum fuga ratione, unde, 
                             ex quaerat iste numquam nemo nihil nobis rem sint quia recusandae dignissimos quos ut rerum nam.</p>
                     </div></a>
-                </div>  -->
+                </div>
             </div>
             <!--copyright-section You Can Remove After Downloading-->
             <div class="footer">
@@ -551,7 +550,7 @@
         <!--contact-->
         <div id="contact">
             <div class="color-changer">
-                <!--<div class="color-panel">
+                <div class="color-panel">
                 <img src="images/gear.png" alt="">
             </div>
             <div class="color-selector">
@@ -578,7 +577,7 @@
                     </li>
                     </ul>
                 </div>
-            </div>-->
+            </div>
             </div>
             <div class="contact-header"><span class="color"> Contáctame </span>
                 <div class="contact-header-caption"> <span class="color">Ponte</span> en Contacto.</div>
