--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <span class="close-second"></span>
             </div>
             <div class="navigation-links">
-                <a href="#" data-text="Página Principal" id="home-link">BIENVENIDO</a>
+                <a href="" data-text="Página Principal" id="home-link">BIENVENIDO</a>
                 <a href="#" data-text="Descubre Más Sobre Mí" id="about-link">SOBRE MÍ</a>
                 <a href="#" data-text="Explora Mi Rincón Personal" id="blog-link">MI BLOG</a>
                 <a href="#" data-text="Mira Mis Trabajos" id="portfolio-link">MI PORTAFOLIO</a>
@@ -87,8 +87,8 @@
             <!--Social Media Links end-->
             <div class="header-content">
                 <div class="header-content-box">
-                    
-                    <div class="firstline"><span class="color">Sebastián </span>Flórez</div>
+                    <div class="subfirstline"><span class="color">Diseño y Desarrollo </span>Web</div>
+                    <div class="firstline"><span class="color">SEBASTIAN </span>FLOREZ</div>
                     <div class="secondline">
                         Soy
                         <span class="txt-rotate color" data-period="1200"
@@ -118,7 +118,7 @@
                     <img src="images/gear.png" alt="">
                 </div>
                 <div class="color-selector">
-                    <div class="heading">Custom Colors</div>
+                    <div class="heading">Cambia el color</div>
                     <div class="colors">
                         <ul>
                             <li>
@@ -146,25 +146,26 @@
             <!--about content-->
             <div id="about-content">
                 <div class="about-header">
-                    Acerca de <span class="color">Mi</span>
+                    Sebastián <span class="color">Florez</span>
                     <span class="header-caption">Conóceme<span class="color"></span></span>
                 </div>
                 <div class="about-main">
                     <div class="about-first-paragraph wow">
                         <!--about description-->
                         <span class="about-first-line">
-                            Soy un creativo de tecnología
-                            <span class="color">web developer</span>
+                            Soy un desarrollador creativo de tecnología
+                            <span class="color">enfoque directo para la web</span>
                             de la ciudad de Yopal - Casanare </span>
                         <br>
-                        <span class="about-second-line"> ¡Hola! Soy Juan Sebastian Florez, un desarrollador web con 5
-                            años de experiencia. Me especializo en desarrollo backend con Django, creando soluciones
-                            tecnológicas y herramientas personalizadas para empresas locales.<br><br> Desde páginas web
+                        <span class="about-second-line"> ¡Hola! Soy Juan Sebastian Florez, un apasionado desarrollador web con más de 5 años de experiencia.
+                             Mi especialidad es el desarrollo backend utilizando Django, donde creo soluciones tecnológicas y herramientas personalizadas para empresas locales.
+                             <br><br>Desde la creación de páginas web hasta el diseño gráfico y la gestión de bases de datos, mi enfoque es ofrecer soluciones efectivas y 
+                             visualmente atractivas que impulsan resultados tangibles. Siempre me mantengo proactivo y en constante aprendizaje para abordar nuevos desafíos con confianza.
                             a diseño gráfico y bases de datos, mi enfoque es crear soluciones efectivas y visualmente
                             atractivas que impulsen resultados. Soy proactivo y siempre aprendiendo para enfrentar
                             desafíos con confianza.
-
-                            ¡Estoy listo para colaborar y llevar tus ideas al mundo digital!</span>
+                            <br><br>
+                            ¡Estoy listo para colaborar contigo y llevar tus ideas al mundo digital! ¿Listo para dar el siguiente paso hacia una presencia en línea impactante y efectiva?</span>
                         <div class="cv">
                             <a href="images/sebastian florez C.Vitae.jpg" download><button>Descarga mi <span
                                         class="colors">CV</span></button></a>
@@ -172,7 +173,7 @@
                     </div>
                     <!--about picture-->
                     <div class="about-img">
-                        <img src="images/about1.png" alt="Your Image">
+                        <img src="images/about1.png" alt="creación de paginas web yopal">
                     </div>
                 </div>
             </div>
@@ -183,7 +184,7 @@
                         <img src="images/gear.png" alt="">
                     </div>
                     <div class="color-selector">
-                        <div class="heading">Custom Colors</div>
+                        <div class="heading">Cambia el color</div>
                         <div class="colors">
                             <ul>
                                 <li>
@@ -217,32 +218,29 @@
                 <div class="services-content">
                     <div class="service-one service wow">
                         <div class="service-img">
-                            <img src="images/coding.png" alt="service-one">
+                            <img src="images/coding.png" alt="diseño-desarrollo-web">
                         </div>
                         <div class="service-description">
                             <h2>Diseño y Desarrollo Web</h2>
-                            <p>Soluciones completas para tu empresa y/o emprendimiento con diseño, hosting y asesorias
-                                para tener lo mejor.</p>
+                            <p>Optimiza tu empresa o emprendimiento con soluciones completas: diseño, hosting y asesorías expertas. ¡Garantiza lo mejor para tu presencia en línea</p>
                         </div>
                     </div>
                     <div class="service-two service wow">
                         <div class="service-img">
-                            <img src="images/instagram.png" alt="service-two">
+                            <img src="images/instagram.png" alt="redes-sociales">
                         </div>
                         <div class="service-description">
                             <h2>Social Media</h2>
-                            <p>LLeva tus redes sociales a otro nivel con diseños únicos y en tendencia. Te acompaño a
-                                publicitar tus páginas y productos</p>
+                            <p>Eleva tus redes sociales con diseños únicos y en tendencia. Te brindo asesoramiento para promocionar tus páginas y productos de manera efectiva.</p>
                         </div>
                     </div>
                     <div class="service-three service wow">
                         <div class="service-img">
-                            <img src="images/bulb.png" alt="service-three">
+                            <img src="images/bulb.png" alt="internet-para-empresas">
                         </div>
                         <div class="service-description">
                             <h2>Soluciones Empresariales</h2>
-                            <p>Ajusta tu empresa a las tendencias tecnologicas que requiere el mercado. Bases de datos y
-                                software de manejo empresarial</p>
+                            <p>Adapta tu empresa a las últimas tendencias tecnológicas del mercado. Especializado en bases de datos y software de gestión empresarial para potenciar tu éxito.</p>
                         </div>
                     </div>
                 </div>
@@ -358,17 +356,18 @@
                 </div>
             </div>
             <div class="portfolio-header"> <span class="color"> My </span> Portfolio
-                <span class="header-caption"> Some Of My <span class="color"> Works</span></span>
+                <span class="header-caption"> Algo sobre mis <span class="color"> Trabajos</span></span>
             </div>
             <div id="portfolio-content">
                 <div class="portfolio portfolio-first">
                     <div class="portfolio-image">
-                        <img src="images/portfolio-first.jpg" alt="portfolio-first">
+                        <img src="images/portfolio-first.jpg" alt="aplicaciones-moviles">
                     </div>
                     <div class="portfolio-text">
                         <h2>App Idea</h2>
-                        <p>Ten la comodidad de tener en la palma de la mano tus ideas y compartirla con tus clientes y
-                            comunidad con diseños responsivos es decir que se adapta a todos tus dispositivos</p>
+                        <p>Transforma tus ideas en una experiencia digital única con nuestra aplicación 'App Idea'. 
+                            Con diseños responsivos, disfruta de la comodidad de llevar tus conceptos en la palma de 
+                            tu mano y compártelos fácilmente con tus clientes y comunidad, adaptándose perfectamente a todos tus dispositivos.</p>
                         <div class="button"><a
                                 href="#"><!--<button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button>--></a>
                         </div>
@@ -376,13 +375,12 @@
                 </div>
                 <div class="portfolio portfolio-second">
                     <div class="portfolio-image">
-                        <img src="images/portfolio-second.jpg" alt="portfolio-second">
+                        <img src="images/portfolio-second.jpg" alt="paginas-web">
                     </div>
                     <div class="portfolio-text">
                         <h2>Diseño Web</h2>
-                        <p>Siempre estoy actualizado a las nuevas tendencias del diseño web para que logren impacto que
-                            se necesita en la web para llamar la atención de nuevos clientes y visualizacíon de tu marca
-                            comercial y/o personal</p>
+                        <p>Permanezco siempre actualizado con las últimas tendencias en diseño web para garantizar un impacto 
+                            visual que captura la atención de nuevos clientes y optimiza la visibilidad de tu marca comercial y personal en la web.</p>
                         <div class="button"><a
                                 href="#"><!--<button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button>--></a>
                         </div>
@@ -391,13 +389,13 @@
 
                 <div class="portfolio portfolio-third">
                     <div class="portfolio-image">
-                        <img src="images/portfolio-third.jpg" alt="portfolio-third">
+                        <img src="images/portfolio-third.jpg" alt="creación-de-marca">
                     </div>
                     <div class="portfolio-text">
                         <h2>Diseño Gráfico</h2>
-                        <p>Recuerda que una imgen vale mas que mil palabras asi que tenemos todas las herramientas
-                            necesarias para dar a mostrar tus idéas con diseños frescos y llamativos para publicitar tu
-                            marca</p>
+                        <p>En el universo del diseño gráfico, entendemos el poder de una imagen. Contamos con las herramientas necesarias 
+                            para dar vida a tus ideas mediante diseños frescos y llamativos. Desde la creación de marcas hasta la promoción, 
+                            estamos aquí para optimizar tu presencia en línea y dejar una impresión duradera en tu audiencia.</p>
                         <div class="button"><a
                                 href="#"><!--<button><span class="index"> View Project<i class="gg-arrow-right"></i></span></button>--></a>
                         </div>
@@ -459,7 +457,7 @@
             <div class="blog-header"> Blogs</span>
                 <span class="header-caption"> My Latest <span class="color"> blog posts.</span></span>
             </div>
-            <div class="blog-content">
+            <!--<div class="blog-content">
                 <div class="blogs">
                     <a href="entries/initial blog.html">
                         <div class="img">
@@ -537,7 +535,7 @@
                             ex quaerat iste numquam nemo nihil nobis rem sint quia recusandae dignissimos quos ut rerum nam.</p>
                     </div></a>
                 </div>
-            </div>
+            </div>-->
             <!--copyright-section You Can Remove After Downloading-->
             <div class="footer">
                 <div class="footer-text">
@@ -554,7 +552,7 @@
                 <img src="images/gear.png" alt="">
             </div>
             <div class="color-selector">
-                <div class="heading">Custom Colors</div>
+                <div class="heading">Cambia el color</div>
                 <div class="colors">
                     <ul >
                     <li>
@@ -607,21 +605,21 @@
                     </div>
                     <div class="contact-info-content">
                         <div class="contect-info-content-line">
-                            <img src="./images/icon-name.png" class="icon" alt="name-icon">
+                            <img src="./images/icon-name.png" class="icon" alt="sebastian-florez-telefono">
                             <div class="contact-info-icon-text">
                                 <h6>Nombre</h6>
                                 <p>Sebastián Florez</p>
                             </div>
                         </div>
                         <div class="contect-info-content-line">
-                            <img src="./images/icon-location.png" class="icon" alt="location-icon">
+                            <img src="./images/icon-location.png" class="icon" alt="direccion-paginas-web">
                             <div class="contact-info-icon-text">
                                 <h6>Ubicación</h6>
                                 <p>Carrera 23 # 14 - 10</p>
                             </div>
                         </div>
                         <div class="contect-info-content-line">
-                            <img src="./images/icon-phone.png" class="icon" alt="phone-icon">
+                            <img src="./images/icon-phone.png" class="icon" alt="sebastian-florez-telefono">
                             <div class="contact-info-icon-text">
                                 <h6>Telefono</h6>
                                 <p>322 3088873</p>
@@ -629,7 +627,7 @@
                         </div>
 
                         <div class="contect-info-content-line">
-                            <img src="./images/icon-email.png" class="icon" alt="email-icon">
+                            <img src="./images/icon-email.png" class="icon" alt="email-paginas-web">
                             <div class="contact-info-icon-text">
                                 <h6>Email</h6>
                                 <p>juansebastianflorezescobar@gmail.com</p>
